[package]
name = "native-windows-derive2"
version = "0.1.0"
authors = ["launcher-rs"]
edition = "2024"

description = "A very light and simple rust GUI library"

repository = "https://github.com/launcher-rs/native-windows-gui2"

license = "MIT"

keywords = ["gui", "ui", "windows"]

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "0.1.5"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"]}
quote = "1.0"
