[package]
name = "listview-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui2 = {path = "../../",  features = ["list-view","image-list","file-dialog","embed-resource"] }
native-windows-derive2 = {path = "../../../native-windows-derive2"}
