[package]
name = "load-config"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui2 = { path = "../../", features = ["file-dialog","embed-resource","color-dialog","font-dialog"] }
native-windows-derive2 = {path = "../../../native-windows-derive2"}
serde = { version="1.0",features = ["derive"] }
serde_json = "1.0"