[package]
name = "syncdraw"
version = "0.1.0"
authors = ["launcher-rs"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui2 = {path="../..", features=["extern-canvas", "animation-timer", "cursor", "notice", "status-bar"]}
native-windows-derive2 = {path="../../../native-windows-derive2"}
glutin = "0.21"
gl = "0.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "psapi", "processthreadsapi", "synchapi"] }
