[package]
name = "tabs-partial"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-derive2 = {path = "../../../native-windows-derive2"}
native-windows-gui2 = { path = "../../" }